# CivicLens

./: .env.example  .gitignore  DEPLOY.md  README.md  backup.sh  create_civiclens_db_20251016T030433Z.sh  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.yaml
Models/: .gitignore  Agenda_09_Items.json  README.md  asr_extraction.py  chatbot_service.py  chunker.py  config.yaml  info.json  main.py  meeting_summary.py  modifiedOutput.json  output.json  pdf_extraction.json  pdf_extraction.py  pyproject.toml  requirements.txt  script.py  speaker_time.json  speaker_words.json  summary.json
Models/.temp/: RegularCityCouncil-31326.srt  RegularCityCouncil-31326.tsv  RegularCityCouncil-31326.txt  RegularCityCouncil-31326.vtt  RegularCityCouncil-31326_Summary.json  agenda_17962_parsed.json
Models/ASR_Whisperx/: RegularCityCouncil-9_10_25.json  RegularCityCouncil-9_10_25.srt  RegularCityCouncil-9_10_25.tsv  RegularCityCouncil-9_10_25.txt  RegularCityCouncil-9_10_25.vtt  RegularCityCouncil-9_12_25.srt  RegularCityCouncil-9_12_25.tsv  RegularCityCouncil-9_12_25.txt  RegularCityCouncil-9_12_25.vtt  RegularCityCouncil-9_9_25.json  RegularCityCouncil-9_9_25.srt  RegularCityCouncil-9_9_25.tsv  RegularCityCouncil-9_9_25.txt  RegularCityCouncil-9_9_25.vtt
Models/Agenda_Items/: Agenda_09_Items.json  Agenda_10_Items.json  Agenda_12_Items.json  Minutes_09.json  Minutes_10.json  Minutes_12.json  test_meetings.json
Models/Summaries/: 70b_Summary-RegularCityCouncil-9_10_25.json  70b_Summary-RegularCityCouncil-9_9_25.json  (+3 more)
Models/pipeline/: cli.py  (+6 more)
(+116 files in other folders)
