[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "council-pipeline"
version = "0.1.0"
description = "LA City Council meeting processing pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.32",
    "pytubefix>=10.0",
    "PyMuPDF>=1.24",
    "torch>=2.8",
    "torchaudio>=2.8",
    "ollama>=0.6",
    "langchain-core>=1.2",
    "langchain-community>=0.4",
    "langchain-ollama>=1.0",
    "langchain-text-splitters>=1.1",
    "chromadb>=1.3",
    "scikit-learn>=1.7",
    "numpy>=2.3",
    "SQLAlchemy>=2.0",
]

[project.scripts]
council-pipeline = "pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "utils*"]
